--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "chrome-remote",
   "version": "1.0.0",
   "description": "Control your desktop Chrome application over http.",
-  "main": "my-chrome-app/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Fredrik Eklund",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^5.9.0",
-    "eslint-config-google": "^0.11.0"
+    "eslint-config-google": "^0.11.0",
+    "jest": "^23.6.0"
   }
 }
