--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "Sample Messaging extension",
+    "name": "ChromeControl Extension",
     "version": "1.3.1",
-    "description": "Listens to requests from the main app and performs tasks.",
+    "description": "Listens to requests from the ChromeControl app and performs tasks.",
     "browser_action": {
-        "default_title": "Send message to other apps",
+        "default_title": "ChromeControl",
         "default_icon": "ui/icon_16.png",
         "default_popup": "ui/index.html"
     },
